# weather-data-app

./: .gitignore  READ.md  README.md  pyproject.toml
bulgarian_meteo_pro/: apps.py  filters.py  models.py  signals.py  tests.py  urls.py  viewsets.py
bulgarian_meteo_pro/migrations/: 0002_auto_20241102_2044.py  0003_alter_bulgarianmeteoprodata_station_status.py  0004_alter_bulgarianmeteoprodata_station_id.py
general/: dataclass.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
stations/: authorization.py  models.py  serializers.py  tests.py  urls.py  viewsets.py
stations/management/commands/: seed_data.py
stations/migrations/: 0001_initial.py  0002_auto_20241106_2205.py
weather_aggregator/: settings.py  urls.py  views.py
weather_aggregator/templates/: home.html
weather_master_x/: apps.py  filters.py  models.py  serializers.py  signals.py  tests.py  urls.py  viewsets.py
weather_master_x/migrations/: 0001_initial.py  0002_auto_20241106_1323.py
